move alembic location, rename script dir to migrations, add signature capabilities

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,11 +1,12 @@
 # A generic, single database configuration.
 
-[alembic]
+[migrations]
 
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
 sqlalchemy.url = sqlite:///test.db
+script_location = grz_db:migrations
 
 
 # Logging configuration
